# trading_system

./: Cargo.toml  US2000.csv  US2000_with_patterns.csv  sample_data.csv
data_engine/: Cargo.toml
data_engine/src/: candle_type.rs  daily_session_aggregator.rs  data_engine.rs  lib.rs  main.rs  session_data_agg.rs  session_type.rs  week_day_data.rs  weekly_table_aggregator.rs
execution_engine/: Cargo.toml
order_engine/: Cargo.toml
risk_engine/: Cargo.toml
strategy_engine/: Cargo.toml
