[package]
name = "trading_system"
version = "0.1.0"
edition = "2021"

[workspace] 
members = [
    "data_engine", 
    "execution_engine", 
    "order_engine",
    "prediction_engine",
    "risk_engine",
    "strategy_engine"]

[dependencies]
csv = "1.3.1"
data_engine = { path = "data_engine" }
execution_engine = { path = "execution_engine" }
order_engine = { path = "order_engine" }
risk_engine = { path = "risk_engine" }
prediction_engine = {path = "prediction_engine"}
strategy_engine = {path = "strategy_engine"}
